--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -4,7 +4,12 @@
   overflow: hidden;
   align-items: center;
   text-align: center;
-  background: linear-gradient(to right, rgba(13, 14, 9, 0.2), rgba(6, 15, 21, 0.3)), url(../img/background-man.png) center top;
+  background: linear-gradient(
+      to right,
+      rgba(15, 24, 33, 0.29),
+      rgba(44, 92, 97, 0.23)
+    ),
+    url(../img/background-man.png) center top;
   background-size: cover;
   /* Medium break point*/
   @include MEDIUM-DEVICE-WIDTH {
